--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "short_name": "Slimste Kameraad",
   "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#650409",
-  "theme_color": "#650409",
+  "background_color": "#650409",   // ✨ Splash screen kleur
+  "theme_color": "#650409",        // ✨ Bovenbalk en systeemkleur
   "description": "De officiële timer voor De Slimste Kameraad!",
   "icons": [
     {
